--- a/css/main.css
+++ b/css/main.css
@@ -54,10 +54,13 @@ input[type="submit"]:hover {
 
 details {
     padding: 6px;
-    display: flex;
-    flex-direction: column;
     border-radius: 8px;
     width: 100%;
+}
+
+.tasks {
+    display: flex;
+    flex-direction: column;
 }
 
 summary {
@@ -107,4 +110,13 @@ details[open] summary i {
 
 .task.dragging {
     cursor: grabbing;
+}
+
+@keyframes shake {
+    0% {
+        transform: translate(5px, 0);
+    }
+    100% {
+        transform: translate(-5px, 0);
+    }
 }
